--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     
 
     .navbar-tooltip {
-        @apply absolute w-auto p-2 m-2 w-max left-14
+        @apply absolute w-auto p-2 m-2 left-14
         rounded-md shadow-md
         text-white bg-gray-900
         text-xs font-bold
